--- a/admin/css/computer/common.css
+++ b/admin/css/computer/common.css
@@ -1,17 +1,1 @@
-*{margin:0;outline:0 none;padding:0}
-body,button,input,select,textarea{font:12px/1.5 Microsoft YaHei,tahoma,arial,Hiragino Sans GB,\\5B8B\4F53,sans-serif;color:#3c3c3c}
-ul,ol{list-style:none}
-a{text-decoration:none;color:#3c3c3c}
-a:hover{text-decoration:none}
-img{border:0;max-width:100%;max-height:100%}
-table{border-collapse:collapse;border-spacing:0}
-.input{height:40px;width:calc(100% - 22px);border:1px solid #f1eeee;padding:0 10px;font-size:14px;border-radius:4px}
-.relative{position:relative}
-.input:focus{outline:0}
-.left{float:left}
-.right{float:right}
-.pointer{cursor:pointer}
-.text-center{text-align:center}
-.text-right{text-align:right}
-.width-50{width:50%}
-.width-100{width:100%}
+*{margin:0;outline:0 none;padding:0}body,button,input,select,textarea{line-height:1.4;color:#333;font-family:"微软雅黑",Arial,Helvetica,sans-serif;font-size:12px}ul,ol{list-style:none}a{text-decoration:none;color:#3c3c3c}a:hover{text-decoration:none}img{border:0;max-width:100%;max-height:100%}table{border-collapse:collapse;border-spacing:0}.input{height:40px;width:calc(100% - 22px);border:1px solid #f1eeee;padding:0 10px;font-size:14px;border-radius:4px}.relative{position:relative}.input:focus{outline:0}.input:placeholder{color:#999}.left{float:left}.right{float:right}.pointer{cursor:pointer}.text-center{text-align:center}.text-right{text-align:right}.width-50{width:50%}.width-100{width:100%}.hide,.hidden{display:none}.btn{width:100%;height:44px;background:#20a53a;background:linear-gradient(#20a53a,#189d32);box-shadow:inset 0 1px 2px #30ad42;color:#fff;text-shadow:#00851a 0 -1px 0;border:1px solid #20a53a;text-align:center;font-size:16px;color:#fff;border-radius:3px;cursor:pointer}
