--- a/admin/css/computer/space.css
+++ b/admin/css/computer/space.css
@@ -8,6 +8,12 @@
 .margin-top-16{margin-top:16px}
 .margin-top-18{margin-top:18px}
 .margin-top-20{margin-top:20px}
+.margin-top-22{margin-top:22px}
+.margin-top-24{margin-top:24px}
+.margin-top-26{margin-top:26px}
+.margin-top-28{margin-top:28px}
+.margin-top-30{margin-top:30px}
+.margin-top-40{margin-top:40px}
 .margin-right-2{margin-right:2px}
 .margin-right-4{margin-right:4px}
 .margin-right-6{margin-right:6px}
@@ -18,6 +24,11 @@
 .margin-right-16{margin-right:16px}
 .margin-right-18{margin-right:18px}
 .margin-right-20{margin-right:20px}
+.margin-right-22{margin-right:22px}
+.margin-right-24{margin-right:24px}
+.margin-right-26{margin-right:26px}
+.margin-right-28{margin-right:28px}
+.margin-right-30{margin-right:30px}
 .margin-bottom-2{margin-bottom:2px}
 .margin-bottom-4{margin-bottom:4px}
 .margin-bottom-6{margin-bottom:6px}
@@ -28,6 +39,11 @@
 .margin-bottom-16{margin-bottom:16px}
 .margin-bottom-18{margin-bottom:18px}
 .margin-bottom-20{margin-bottom:20px}
+.margin-bottom-22{margin-bottom:22px}
+.margin-bottom-24{margin-bottom:24px}
+.margin-bottom-26{margin-bottom:26px}
+.margin-bottom-28{margin-bottom:28px}
+.margin-bottom-30{margin-bottom:30px}
 .margin-left-2{margin-left:2px}
 .margin-left-4{margin-left:4px}
 .margin-left-6{margin-left:6px}
@@ -38,3 +54,8 @@
 .margin-left-16{margin-left:16px}
 .margin-left-18{margin-left:18px}
 .margin-left-20{margin-left:20px}
+.margin-left-22{margin-left:22px}
+.margin-left-24{margin-left:24px}
+.margin-left-26{margin-left:26px}
+.margin-left-28{margin-left:28px}
+.margin-left-30{margin-left:30px}
