--- a/admin/css/computer/common.css
+++ b/admin/css/computer/common.css
@@ -1,1 +1,38 @@
-*{margin:0;outline:0 none;padding:0}body,button,input,select,textarea{line-height:1.4;color:#333;font-family:"微软雅黑",Arial,Helvetica,sans-serif;font-size:12px}ul,ol{list-style:none}a{text-decoration:none;color:#3c3c3c}a:hover{text-decoration:none}img{border:0;max-width:100%;max-height:100%}table{border-collapse:collapse;border-spacing:0}.input{height:40px;width:calc(100% - 22px);border:1px solid #f1eeee;padding:0 10px;font-size:14px;border-radius:4px}.relative{position:relative}.input:focus{outline:0}.input:placeholder{color:#999}.left{float:left}.right{float:right}.pointer{cursor:pointer}.text-center{text-align:center}.text-right{text-align:right}.width-50{width:50%}.width-100{width:100%}.hide,.hidden{display:none}.btn{width:100%;height:44px;background:#20a53a;background:linear-gradient(#20a53a,#189d32);box-shadow:inset 0 1px 2px #30ad42;color:#fff;text-shadow:#00851a 0 -1px 0;border:1px solid #20a53a;text-align:center;font-size:16px;color:#fff;border-radius:3px;cursor:pointer}
+*{margin:0;outline:0 none;padding:0}
+body,button,input,select,textarea{line-height:1.4;color:#333;font-family:"微软雅黑",Arial,Helvetica,sans-serif;font-size:12px}
+ul,ol{list-style:none}
+h1,h2,h3,h4,h5,h6{font-weight: normal;}
+a{text-decoration:none;color:#3c3c3c}
+a:hover{text-decoration:none}
+img{border:0;max-width:100%;max-height:100%}
+table{border-collapse:collapse;border-spacing:0}
+.input{height:40px;width:calc(100% - 22px);border:1px solid #f1eeee;padding:0 10px;font-size:14px;border-radius:4px}
+.relative{position:relative}
+.input:focus{outline:0}
+.input:placeholder{color:#999}
+.left{float:left}
+.right{float:right}
+.pointer{cursor:pointer}
+.text-center{text-align:center}
+.text-right{text-align:right}
+.width-50{width:50%}
+.width-100{width:100%}
+.hide,.hidden{display:none}
+.btn{width:100%;height:44px;background:#20a53a;background:linear-gradient(#20a53a,#189d32);box-shadow:inset 0 1px 2px #30ad42;color:#fff;text-shadow:#00851a 0 -1px 0;border:1px solid #20a53a;text-align:center;font-size:16px;color:#fff;border-radius:3px;cursor:pointer}
+.color-f{color:#fff}
+.color-6 {
+    color: #666;
+}
+.color-9 {color: #999}
+.color-green{color: #20a53a}
+.bgf{background:#fff}
+.bgf2{background:#f2f2f2}
+.clear{clear: both;}
+/*主体样式*/
+.main-content{width:calc(100% - 180px);margin-left:180px;min-height: 100vh;}
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto
+}
