--- a/admin/css/computer/index/index.css
+++ b/admin/css/computer/index/index.css
@@ -7,10 +7,19 @@
 	padding: 5px;
 }
 
+#left .item {
+    cursor: pointer;
+}
+
+#left .item:hover {
+    background: #20a53a;
+    opacity: 1;
+    color: #FFF;
+}
+
 #user-info .avator {
 	width: 36px;
 	height: 36px;
-	margin-right: 4px;
 	border-radius: 50%;
 	overflow: hidden;
 }
@@ -21,6 +30,7 @@
 }
 
 #user-info .name {
+    margin-left: 4px;
 	width: calc(100% - 40px);
 }
 
@@ -40,7 +50,6 @@
     padding-top: 4px;
     color: #999ea2;
     background-color: rgba(84, 97, 105, 0.32);
-    cursor: pointer;
 }
 
 #left-one .feature {
@@ -51,16 +60,13 @@
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    color: #999ea2;
+    color: #999;
     opacity: 0.7;
-}
-#left-one .feature:hover {
-    opacity: 1;
-    color: #FFF;
+    background: #2c3138;
 }
 
 #left-one .feature.selected {
-    background-color: #e7502b;
+    background-color: #20a53a;
     opacity: 1;
     color: #FFF;
 }
@@ -68,13 +74,14 @@
 #left-one .feature img {
     position: absolute;
     top: 10px;
-    left: 10px;
+    left: 13px;
     width: 20px;
     height: 20px;
 }
 #left-one .feature p {
     position: absolute;
     top: 10px;
+    font-size: 16px;
     left: 40px;
     height: 20px;
     line-height: 20px;
@@ -83,13 +90,15 @@
 .tooltips {
 	position: absolute;
 	left: 50px;
-	background-color: #000;
+	background-color: #20a53a;
 	color: #FFF;
 	height: 24px;
 	line-height: 24px;
+    font-size: 16px;
 	padding: 0 8px;
 	border-radius: 3px;
 	z-index: 9999;
+    word-break: keep-all;
 }
 
 .tooltips:after{
@@ -100,7 +109,11 @@
     width: 0;
     height: 0;
     border-top: 5px solid transparent;
-    border-right: 5px solid #000;
+    border-right: 5px solid #20a53a;
     border-left: 5px solid transparent;
     border-bottom: 5px solid transparent;
+}
+#iframe-content {
+    height: 100vh;
+    line-height: 0;
 }
