--- a/admin/css/computer/set/index.css
+++ b/admin/css/computer/set/index.css
@@ -1,7 +1,7 @@
-.level1 .img {
+.img {
     display: inline-block;
 }
-.level1 .img {
+.img {
     height: 20px;
     width: 20px;
     margin: 0px;
@@ -10,7 +10,7 @@
     background-color: rgba(58, 68, 76, 0.65);
     margin-right: 5px;
 }
-.level1 .img img {
+.img img {
     width: 16px;
     height: 16px;
     margin-top: 2px;
