--- a/admin/css/computer/space.css
+++ b/admin/css/computer/space.css
@@ -59,3 +59,4 @@
 .margin-left-26{margin-left:26px}
 .margin-left-28{margin-left:28px}
 .margin-left-30{margin-left:30px}
+.padding-left-0{padding-left: 0 !important}
